[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlnros2tb3"
version = "0.1.0"
description = "VLN scaffolding for Turtlebot3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "networkx>=3.3",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "vln_platform"}

[tool.setuptools.packages.find]
where = ["vln_platform"]

[tool.pytest.ini_options]
pythonpath = ["vln_platform"]
testpaths = ["vln_platform/tests"]
